--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id post %>" class="w-full sm:w-auto my-5 space-y-5">
   <div>
     <strong class="block font-medium mb-1">Status:</strong>
-    <%= post.status.titleize %>
+    <%= status_badge(post) %>
   </div>
   <div>
     <strong class="block font-medium mb-1">Title:</strong>
